Add UpdateUser gRPC endpoint
